cabal-version:       3.4
name:                w05
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md

common common
  ghc-options:        -Wall
  build-depends:      base ^>= 4.18.1

library
  import:               common
  hs-source-dirs:       src
  exposed-modules:      Optics
                      , W0501
                      , W0502
                      , W0503
                      , W0504
  build-depends:        free
                      , mtl
                      , profunctors
                      , tagged
  default-language:     Haskell2010

test-suite w05-doctests
  import:               common
  type:                 exitcode-stdio-1.0
  main-is:              doctests.hs
  build-depends:        doctest
                      , template-haskell
  ghc-options:          -threaded
  hs-source-dirs:       doctest
  default-language:     Haskell2010
